<resources>
    <string name="app_name">Body Data Record</string>
    <string name="human_time_elapsed">¡ It\'s been %1$d day(s), %2$d hour(s), %3$d minute(s), %4$d second(s) since your last meal !</string>
    <string name="human_last_meal_at">Last meal: %1$s</string>
    <string name="human_breakfast_at">Breakfast: %1$s</string>
    <string name="activity_title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_create_db_entry">Body data entry</string>
    <string name="activity_create_edit_body_data_entry">Body data entry</string>
    <string name="activity_create_edit_weight">Weight</string>
    <string name="activity_create_edit_insert_weight">Insert weight</string>
    <string name="activity_create_edit_height">Height</string>
    <string name="activity_create_edit_insert_height">Insert height</string>
    <string name="activity_create_edit_waist">Waist</string>
    <string name="activity_create_edit_insert_waist_size">Insert waist size</string>
    <string name="activity_create_edit_chest">Chest</string>
    <string name="activity_create_edit_insert_chest_size">Insert chest size</string>
    <string name="activity_create_edit_systole_1">Systole 1</string>
    <string name="activity_create_edit_insert_systole_1_value">Insert systole 1 value</string>
    <string name="activity_create_edit_diastole_1">Diastole 1</string>
    <string name="activity_create_edit_insert_diastole_1_value">Insert diastole 1 value</string>
    <string name="activity_create_edit_systole_2">Systole 2</string>
    <string name="activity_create_edit_insert_systole_2_value">Insert systole 2 value</string>
    <string name="activity_create_edit_diastole_2">Diastole 2</string>
    <string name="activity_create_edit_insert_diastole_2_value">Insert diastole 2 value</string>
    <string name="activity_create_edit_systole_3">Systole 3</string>
    <string name="activity_create_edit_insert_systole_3_value">Insert systole 3 value</string>
    <string name="activity_create_edit_diastole_3">Diastole 3</string>
    <string name="activity_create_edit_insert_diastole_3_value">Insert diastole 3 value</string>
    <string name="activity_create_edit_systole_4">Systole 4</string>
    <string name="activity_create_edit_insert_systole_4_value">Insert systole 4 value</string>
    <string name="activity_create_edit_diastole_4">Diastole 4</string>
    <string name="activity_create_edit_insert_diastole_4_value">Insert diastole 4 value</string>
    <string name="activity_create_edit_systole_5">Systole 5</string>
    <string name="activity_create_edit_insert_systole_5_value">Insert systole 5 value</string>
    <string name="activity_create_edit_diastole_5">Diastole 5</string>
    <string name="activity_create_edit_insert_diastole_5_value">Insert diastole 5 value</string>
    <string name="activity_create_edit_blood_glucose_1">Blood Glucose 1</string>
    <string name="activity_create_edit_insert_blood_glucose_1_value">Insert blood glucose 1 value</string>
    <string name="activity_create_edit_blood_glucose_2">Blood Glucose 2</string>
    <string name="activity_create_edit_insert_blood_glucose_2_value">Insert blood glucose 2 value</string>
    <string name="activity_create_edit_blood_glucose_3">Blood Glucose 3</string>
    <string name="activity_create_edit_insert_blood_glucose_3_value">Insert blood glucose 3 value</string>
    <string name="activity_create_edit_blood_glucose_4">Blood Glucose 4</string>
    <string name="activity_create_edit_insert_blood_glucose_4_value">Insert blood glucose 4 value</string>
    <string name="activity_create_edit_blood_glucose_5">Blood Glucose 5</string>
    <string name="activity_create_edit_insert_blood_glucose_5_value">Insert blood glucose 5 value</string>
    <string name="activity_create_edit_heart_rate_1">Heart rate 1</string>
    <string name="activity_create_edit_heart_rate_2">Heart rate 2</string>
    <string name="activity_create_edit_heart_rate_3">Heart rate 3</string>
    <string name="activity_create_edit_heart_rate_4">Heart rate 4</string>
    <string name="activity_create_edit_heart_rate_5">Heart rate 5</string>
    <string name="activity_create_edit_insert_heart_rate_value_1">Insert Heart rate value 1</string>
    <string name="activity_create_edit_insert_heart_rate_value_2">Insert Heart rate value 2</string>
    <string name="activity_create_edit_insert_heart_rate_value_3">Insert Heart rate value 3</string>
    <string name="activity_create_edit_insert_heart_rate_value_4">Insert Heart rate value 4</string>
    <string name="activity_create_edit_insert_heart_rate_value_5">Insert Heart rate value 5</string>
    <string name="activity_create_edit_pill_1">Pill 1</string>
    <string name="activity_create_edit_insert_pill_1">Insert pill 1 date</string>
    <string name="activity_create_edit_pill_2">Pill 2</string>
    <string name="activity_create_edit_insert_pill_2">Insert pill 2 date</string>
    <string name="activity_create_edit_pill_3">Pill 3</string>
    <string name="activity_create_edit_insert_pill_3">Insert pill 3 date</string>
    <string name="activity_create_edit_pill_4">Pill 4</string>
    <string name="activity_create_edit_insert_pill_4">Insert pill 4 date</string>
    <string name="activity_create_edit_pill_5">Pill 5</string>
    <string name="activity_create_edit_insert_pill_5">Insert pill 5 date</string>
    <string name="activity_create_edit_cholesterol">Cholesterol</string>
    <string name="activity_create_edit_insert_cholesterol_value">Insert cholesterol value</string>
    <string name="activity_create_edit_c_reactive_protein">C Reactive Protein</string>
    <string name="activity_create_edit_insert_c_reactive_protein_value">Insert c reactive protein value</string>
    <string name="activity_create_edit_exercise_minutes">Exercise Minutes</string>
    <string name="activity_create_edit_insert_minutes_of_exercise">Insert minutes of exercise</string>
    <string name="activity_create_edit_exercise_description">Exercise Description</string>
    <string name="activity_create_edit_insert_description_of_exercise">Insert description of exercise</string>
    <string name="activity_create_edit_date_and_time_of_last_meal">Date and time of last meal</string>
    <string name="activity_create_edit_insert_date_and_time_of_last_meal">Insert date and time of last meal</string>
    <string name="activity_create_edit_date_and_time_of_breakfast">Date and time of breakfast</string>
    <string name="activity_create_edit_insert_date_and_time_of_your_breakfast">Insert the date and time of your breakfast</string>
    <string name="activity_create_edit_record_date">Record date</string>
    <string name="activity_create_edit_insert_record_date">Insert record date</string>
    <string name="activity_create_edit_delete">Delete</string>
    <string name="activity_create_edit_save">Save</string>
    <string name="activity_main_add_body_data_entry">add Body Data entry</string>
    <string name="settings_activity_delete_all_body_data_information_from_app">Delete all Body Data information from App</string>
    <string name="default_weightUnitOfMeasure">lbs</string>
    <string name="default_lengthUnitOfMeasure">mts</string>
    <string name="default_abbreviationForMinutes">mins</string>
    <string name="default_temperatureUnitOfMeasure">°C</string>
    <string name="preferences_activity_default_bp_separator">/</string>
    <string name="main_activity_menu_refresh">Refresh</string>
    <string name="preferences_activity_unit_of_measure_for_weight">Unit of measure for weight</string>
    <string name="preferences_activity_unit_of_measure_for_length">Unit of measure for length</string>
    <string name="preferences_activity_abbreviation_for_minutes">Abbreviation for minutes</string>
    <string name="preferences_activity_unit_of_measure_for_temperature">Unit of measure for temperature</string>
    <string name="preferences_activity_body_data_preferences">Body Data Preferences</string>
    <string name="preferences_activity_ui_preferences">User Interface Preferences</string>
    <string name="preferences_activity_compare_last_meal_pref_title">Last meal</string>
    <string name="preferences_activity_compare_last_meal_entries_with_local_time">¿ Compare missing Last meal entries with local time ?</string>
    <string name="preferences_activity_default_bp_separator_title">Default Blood Pressure Separator</string>
    <string name="activity_create_edit_confirm_delete_action_title">Confirm delete action</string>
    <string name="activity_create_edit_confirm_delete_action_msg">¿ Are you sure you want to delete this entry ?</string>
    <string name="activity_create_edit_confirm_delete_action_yes">Yes</string>
    <string name="activity_create_edit_confirm_delete_action_no">No</string>
    <string name="activity_preferences_delete_all_confirm_delete_action_title">Confirm delete action</string>
    <string name="activity_preferences_delete_all_confirm_delete_action_msg">¿ Are you sure you want to delete all entries ?</string>
    <string name="activity_preferences_delete_all_confirm_delete_action_yes">Yes</string>
    <string name="activity_preferences_delete_all_confirm_delete_action_no">No</string>
    <string name="main_activity_menu_export_csv">Export to CSV</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="default_Pill1Name">Pill 1</string>
    <string name="preferences_activity_pill1_name">Default Name for Pill 1</string>
    <string name="default_Pill2Name">Pill 2</string>
    <string name="preferences_activity_pill2_name">Default Name for Pill 2</string>
    <string name="default_Pill3Name">Pill 3</string>
    <string name="preferences_activity_pill3_name">Default Name for Pill 3</string>
    <string name="default_Pill4Name">Pill 4</string>
    <string name="preferences_activity_pill4_name">Default Name for Pill 4</string>
    <string name="default_Pill5Name">Pill 5</string>
    <string name="preferences_activity_pill5_name">Default Name for Pill 5</string>
    <string name="activity_create_edit_set_to_now">¡ Set it to now !</string>
    <string name="preferences_activity_pill_names">Pill Names</string>
    <string name="activity_create_edit_blood_pressure_date_1">Blood Pressure Date 1</string>
    <string name="activity_create_edit_insert_blood_pressure_1">Insert blood pressure date 1</string>
    <string name="activity_create_edit_blood_pressure_date_2">Blood Pressure Date 2</string>
    <string name="activity_create_edit_insert_blood_pressure_2">Insert blood pressure date 2</string>
    <string name="activity_create_edit_blood_pressure_date_3">Blood Pressure Date 3</string>
    <string name="activity_create_edit_insert_blood_pressure_3">Insert blood pressure date 3</string>
    <string name="activity_create_edit_blood_pressure_date_4">Blood Pressure Date 4</string>
    <string name="activity_create_edit_insert_blood_pressure_4">Insert blood pressure date 4</string>
    <string name="activity_create_edit_blood_pressure_date_5">Blood Pressure Date 5</string>
    <string name="activity_create_edit_insert_blood_pressure_5">Insert blood pressure date 5</string>
    <string name="activity_create_edit_temperature_1">Temperature 1</string>
    <string name="activity_create_edit_insert_temperature_value_1">Insert Temperature 1 Value</string>
    <string name="activity_create_edit_temperature_2">Temperature 2</string>
    <string name="activity_create_edit_insert_temperature_value_2">Insert Temperature 2 Value</string>
    <string name="activity_create_edit_temperature_3">Temperature 3</string>
    <string name="activity_create_edit_insert_temperature_value_3">Insert Temperature 3 Value</string>
    <string name="activity_create_edit_temperature_4">Temperature 4</string>
    <string name="activity_create_edit_insert_temperature_value_4">Insert Temperature 4 Value</string>
    <string name="activity_create_edit_temperature_5">Temperature 5</string>
</resources>